Troubleshooting 100vh issue on mobile.

--- a/theme/global.css
+++ b/theme/global.css
@@ -6,7 +6,8 @@
 }
 
 html, body {
-  height: 100% !important;
+  overflow: hidden;
+  height: 100%;
 }
 
 ._aI {
